# fenrir

./: .gitignore  Cargo.toml  README.md
rules/: credential_access.yaml  defense_evasion.yaml  lateral_movement.yaml  persistence.yaml  process_injection.yaml
src/: lib.rs  main.rs
src/correlation/: mod.rs
src/etw/: mod.rs  parser.rs  providers.rs
src/graph/: mod.rs
src/rules/: mod.rs  patterns.rs  sigma.rs
